--- a/sharad-back-haskell.cabal
+++ b/sharad-back-haskell.cabal
@@ -35,6 +35,7 @@ library
   build-depends:
       base >=4.7 && <5
       , happstack-server
+      , bytestring
   default-language: Haskell2010
 
 executable sharad-back-haskell-exe
@@ -43,7 +44,7 @@ executable sharad-back-haskell-exe
       Paths_sharad_back_haskell
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
       base >=4.7 && <5
     , sharad-back-haskell
