--- a/sharad-back-haskell.cabal
+++ b/sharad-back-haskell.cabal
@@ -71,4 +71,7 @@ test-suite sharad-back-haskell-test
   build-depends:
       base >=4.7 && <5
     , sharad-back-haskell
+    , HUnit
+    , directory
+    , transformers
   default-language: Haskell2010
