--- a/sharad-back-haskell.cabal
+++ b/sharad-back-haskell.cabal
@@ -15,8 +15,7 @@ author:         Author name here
 maintainer:     example@example.com
 copyright:      2021 Author name here
 build-type:     Simple
-extra-source-files:
-    ChangeLog.md
+--extra-source-files:
 
 source-repository head
   type: git
