bit of renaming to be coherent with the project

--- a/cabal.project
+++ b/cabal.project
@@ -1,1 +1,1 @@
-packages: sharad-back-haskell.cabal, ../sharad-common/sharad-common.cabal
+packages: sharad-backend.cabal, ../sharad-common/sharad-common.cabal
