creating the checklist crud spec

--- a/sharad-backend.cabal
+++ b/sharad-backend.cabal
@@ -21,6 +21,7 @@ library
       , NoteService
       , Crud
       , NoteCrud
+      , ChecklistCrud
   other-modules:
       Paths_sharad_backend
   hs-source-dirs:
