--- a/sharad-backend.cabal
+++ b/sharad-backend.cabal
@@ -36,6 +36,7 @@ library
     , binary
     , directory
     , transformers
+    , mtl
   default-language: Haskell2010
 
 executable sharad-backend
