--- a/sharad-backend.cabal
+++ b/sharad-backend.cabal
@@ -18,7 +18,7 @@ source-repository head
 library
   exposed-modules:
       Lib
-      , NoteService
+      , CrudStorage
       , Crud
       , NoteCrud
       , ChecklistCrud
